--- a/app/views/_shared/_modal-container.html.slim
+++ b/app/views/_shared/_modal-container.html.slim
@@ -1,6 +1,6 @@
 dialog id="my-modal" data-controller="modal" data-modal-target="container"
-  .dialog-content.bg-white.rounded-lg.shadow-lg.w-xl.p-4.pb-6.-translate-y-10
-    header.nav_header.border-b-2.border-gray-100.mb-6.pb-4
+  .dialog-content.rounded-lg.shadow-lg.w-xl.p-4.pb-6.-translate-y-10
+    header.nav_header.mb-6.pb-4
       - if defined? subheading
         hgroup
           h2 = heading
