--- a/app/views/_shared/_purchase_payment_progress.html.slim
+++ b/app/views/_shared/_purchase_payment_progress.html.slim
@@ -4,4 +4,4 @@
 .flex.justify-between.pt-1.text-sm.font-medium.px-2
   span.text-lime-700 $#{format_money purchase.paid} paid
   span.text-yellow-700/80 #{format_money purchase.debt} debt
-  span.text-gray-600 #{format_money purchase.item_price}/unit
+  span.text-gray-600.dark:text-gray-500 #{format_money purchase.item_price}/unit
