--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
     header.container.mx-auto.pt-2
       nav role="navigation-main"
         ul role="navigation-logo"
-         li.text-gray-700
+         li.text-gray-700.dark:text-gray-500
           i.icn.text-2xl.mr-2 😸
           strong.align-text-bottom StoreMate
         ul.text-sm
