--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -20,7 +20,7 @@
 
   fieldset data-controller="product-editions"
     label Editions
-    p.text-gray-600 Select any combination of the attributes below to generate editions automatically
+    p.text-gray-600.dark:text-gray-500 Select any combination of the attributes below to generate editions automatically
 
     .flex.justify-between.gap-4.px-4
       .block.w-full
@@ -37,7 +37,7 @@
   - if form.object.new_record?
     fieldset data-controller="product-purchase"
       label Purchase
-      p.text-gray-600 You can create a purchase alongside with new product
+      p.text-gray-600.dark:text-gray-500 You can create a purchase alongside with new product
       .px-4.pb-1 data-product-purchase-target="add"
         = link_to "", class: "btn-rounded mt-6", data: {action: "product-purchase#addForm"}
           i.icn 💰
