--- a/app/views/sales/_form.html.slim
+++ b/app/views/sales/_form.html.slim
@@ -53,7 +53,7 @@
       = form.text_field :shipping_total  
 
   label Status
-  .flex.flex-wrap.gap-4.p-4.border.border-gray-200.rounded-md
+  .flex.flex-wrap.gap-4.p-4.border.border-gray-200.rounded-md class="dark:border-gray-800"
     = form.collection_radio_buttons(:status, Sale.status_names, :itself, :titleize) do |rdb|
       .flex.items-center.mr-2
         = rdb.label(class: "m-0 p-0 flex items-center relative cursor-pointer")
