--- a/app/views/sales/_product_fields.html.slim
+++ b/app/views/sales/_product_fields.html.slim
@@ -1,5 +1,5 @@
 - if product.present?
-  .sales-form__product_fields.mb-3.max-w-1/3.border.border-gray-200.rounded-xl.p-4.pb-8
+  .sales-form__product_fields.mb-3.max-w-1/3.border.border-gray-200.rounded-xl.p-4.pb-8 class="dark:border-gray-800"
     = f.hidden_field :product_id
     h6.mb-6.mt-2 = product.full_title
     = f.label :qty, "Amount"
