--- a/app/views/warehouses/_form.html.slim
+++ b/app/views/warehouses/_form.html.slim
@@ -42,11 +42,11 @@
   = form.file_field :images, multiple: true
 
   label Transition notifications
-  p.text-gray-600.mb-6
+  p.text-gray-600.dark:text-gray-500.mb-6
     | We will send 
     = link_to "a notification", "http://localhost:3000/rails/mailers/notifications_mailer/warehouse_changed_email", class: "link"
     |  when a product is moved from this warehouse to one of the warehouses listed below
-  .border.border-gray-200.rounded-lg data-controller="edit-warehouse-transition"
+  .border.border-gray-200.rounded-lg class="dark:border-gray-800" data-controller="edit-warehouse-transition"
     table
       thead
         tr
