--- a/app/views/warehouses/_warehouse.html.slim
+++ b/app/views/warehouses/_warehouse.html.slim
@@ -5,7 +5,7 @@ tr id="#{dom_id warehouse}" data-action="click->table#goTo" data-table-url-param
     - if warehouse.is_default?
       span.group.relative
         span.text-2xl/2.text-yellow-600.ml-2 *
-        span.absolute.top-0.left-0.opacity-0.pointer-events-none.transition-opacity.duration-150.flex.group-hover:opacity-100.group-hover:pointer-events-auto.rounded-lg.bg-yellow-100.border.border-yellow-800/10.pt-4.pr-5.pb-5.pl-3.w-64.text-yellow-800.text-sm.text-pretty
+        span.absolute.top-0.left-0.opacity-0.pointer-events-none.transition-opacity.duration-150.flex.group-hover:opacity-100.group-hover:pointer-events-auto.rounded-lg.bg-yellow-100.dark:bg-yellow-800.border.border-yellow-800/10.pt-4.pr-5.pb-5.pl-3.w-64.text-yellow-800.dark:text-yellow-100.text-sm.text-pretty
           | New purchases go to this warehouse by default. Change it on the edit page.
     br
     = warehouse.external_name
