--- a/app/views/warehouses/index.html.slim
+++ b/app/views/warehouses/index.html.slim
@@ -8,8 +8,8 @@ section.section-border-base.section-wide
         th Position
         th Name <span class="font-normal text-sm pl-4">+ External Name for Clients</span>
         th CBM
-        th Container Tracking
-        th Courier Tracking
+        / th Container Tracking
+        / th Courier Tracking
         th Products
         th.text-right Actions
     tbody
