--- a/app/views/warehouses/show.html.slim
+++ b/app/views/warehouses/show.html.slim
@@ -4,7 +4,7 @@
 header.nav_header
   .flex.gap-4
     = back_btn
-    h1 = @warehouse.name
+    h1.text-5xl = @warehouse.name
   menu.nav_menu
     li = link_to new_purchase_item_path(warehouse_id: @warehouse)
       i.icn 📦
