--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -180,7 +180,7 @@
   }
 
   .nav_header {
-    @apply flex justify-between items-center text-pretty;
+    @apply flex justify-between items-center text-pretty mb-5;
   }
   .nav_menu {
     @apply flex justify-end whitespace-nowrap gap-2 pt-2;
