feat: Enhance form styling and structure across authentication views

--- a/app/views/layouts/unauthenticated.html.slim
+++ b/app/views/layouts/unauthenticated.html.slim
@@ -6,12 +6,11 @@ html
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = stylesheet_link_tag "tailwind", "data-turbo-track": "reload"
     = javascript_importmap_tags
     = turbo_refresh_method_tag :morph
     = turbo_refresh_scroll_tag :preserve
-  body.flex.flex-col.items-center.justify-center.min-h-screen.p-4
-    .bg-white.w-full.max-w-2xl.md:border.border-gray-500/10.rounded-2xl.p-4.dark:bg-gray-500/10
+  body.flex.flex-col.items-center.justify-center.min-h-screen.wbg
+    .section-border-base.max-w-3xl.min-h-96.px-12.py-14.backdrop-blur-xl
       = yield
-    .text-xs.font-bold.text-gray-400.mt-3 StoreMate
+    .text-md.font-bold.text-gray-400.mt-6 StoreMate
