--- a/app/views/passwords/new.html.slim
+++ b/app/views/passwords/new.html.slim
@@ -1,11 +1,11 @@
-h1 Forgot your password?
+h1.text-5xl Forgot your password?
 
 = render "_shared/notice"
 
-= form_with url: passwords_path do |form|
+= form_with url: passwords_path, class: "flex flex-col gap-6 my-8" do |form|
   = form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address]
-  = form.submit "Email reset instructions"
+  = form.submit "Email reset instructions", class: "w-full"
 
-.flex.space-x-1.text-sm
-  = link_to "Create new account", sign_up_path
-  = link_to "Already have an account?", sign_in_path
+.space-x-4
+  = link_to "Create new account", sign_up_path, class: "link"
+  = link_to "Already have an account?", sign_in_path, class: "link"
