fix: Remove unnecessary width classes from notice components for consistency

--- a/app/views/_shared/_notice-err.html.slim
+++ b/app/views/_shared/_notice-err.html.slim
@@ -1,5 +1,5 @@
 - if model.errors.any?
-  article.w-5xl.h-fit.mx-auto.bg-red-100.rounded-xl.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
+  article.h-fit.mx-auto.bg-red-100.rounded-xl.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
     header.p-8.h-24.flex.justify-between.items-center.border-b-4.border-red-800/5.dark:border-red-950/30
       i.icn.text-3xl 🚨
       p.text-lg.font-semibold Fix errors and try again
@@ -12,7 +12,7 @@
           = error.message
 
 - if flash[:error].present?
-  article.w-5xl.h-24.mx-auto.bg-red-100.rounded-xl.flex.justify-between.items-center.p-8.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
+  article.h-24.mx-auto.bg-red-100.rounded-xl.flex.justify-between.items-center.p-8.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
     i.icn.text-3xl 🚨
     p.text-lg.font-semibold = sanitize(flash[:error])
     i.icn.text-3xl 🚨
