--- a/app/views/layouts/unauthenticated.html.slim
+++ b/app/views/layouts/unauthenticated.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title 😸 Store Mate 😸
+    title Store Mate
     meta[name="robots" content="noindex"]
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
