--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -2,12 +2,12 @@
   .stimulus data-controller="purchase-edition"
     = form.label :product_id
     .stimulus#purchase-product-select
-      = form.collection_select :product_id, Product.all, :id, :full_title_with_shop_id, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-edition#change" }
+      = form.collection_select :product_id, Product.all, :id, :build_full_title_with_shop_id, { class: "select" }, data: { controller: "slim-select", action: "change->purchase-edition#change" }
 
     .stimulus#purchase-edition-select data-purchase-edition-target="select"
       - if purchase.product&.editions.present?
         = form.label :edition_id
-        = form.collection_select :edition_id, purchase.product.editions_with_title, :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
+        = form.collection_select :edition_id, purchase.product.fetch_editions_with_title, :id, :title, { class: "select", include_blank: true }, data: { controller: "slim-select" }
 
   fieldset.flex.justify-between.gap-4
     .block.w-full
