--- a/app/views/purchase_items/_form.html.slim
+++ b/app/views/purchase_items/_form.html.slim
@@ -6,7 +6,7 @@
   = form.collection_select(:purchase_id, @purchases || [], :id, :full_title, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
   
   = form.label :sale_item
-  = form.collection_select(:sale_item_id, @sale_items || [], :id, :title_for_select, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
+  = form.collection_select(:sale_item_id, @sale_items || [], :id, :build_title_for_select, { class: "select", include_blank: true  }, data: { controller: "slim-select" })
 
   = form.label :length
   = form.text_field :length
