--- a/app/views/_shared/_purchase_payment_progress.html.slim
+++ b/app/views/_shared/_purchase_payment_progress.html.slim
@@ -1,14 +1,11 @@
-.w-full.h-6.rounded-full.overflow-hidden.relative class="#{purchase.progress >= 100 ? '' : 'border-1 border-gray-100 dark:border-gray-900 bg-yellow-600/80 dark:bg-yellow-700'}"
+.progress-container class="#{purchase.progress >= 100 ? '' : 'bg-slate-700/30'}"
   - if purchase.progress == 0
-    .h-full.rounded-full
-      p.inline-flex.justify-center.items-center.font-bold.px-1.text-shadow-xs.text-gray-100.absolute.z-10.inset-0 0%
-  - elsif purchase.progress < 100
-    .h-full.bg-lime-700.rounded-full class="dark:bg-lime-900" style="width: #{purchase.progress}%"
-      p.inline-flex.justify-center.items-center.font-bold.px-1.text-shadow-xs.text-gray-100.absolute.z-10.inset-0 $#{format_money purchase.paid} — #{purchase.progress.round}%
-  - else
-    .w-full.h-full.bg-lime-700.rounded-full class="dark:bg-lime-950"
-- if purchase.progress < 100
+    p.progress-amount 0%
+  - elsif purchase.progress <= 100
+    .rounded-full.h-full.bg-lime-700/80 style="width: #{purchase.progress}%"
+      p.progress-amount #{purchase.progress.round}%
+- if purchase.progress >= 0 && purchase.progress != 100
   .flex.justify-between.pt-1.text-sm.font-medium.px-2
-    span.text-yellow-700/80 class="dark:text-yellow-600" $#{format_money purchase.debt} debt
-    span.text-yellow-700/80 class="dark:text-yellow-600" #{format_money purchase.item_debt} debt/unit
-    span.text-gray-600.dark:text-gray-500 #{format_money purchase.item_price}/unit
+    span.text-lime-700/90 class="dark:text-lime-500/85" #{purchase.item_paid > 0 ? format_money(purchase.item_paid) : "-"}
+    span.text-slate-400 #{format_money purchase.item_price}
+    span.text-orange-800/70 class="dark:text-orange-400/80" #{format_money purchase.item_debt}
