--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -14,7 +14,12 @@ section.section-border-base.section-wide data-controller="table move-items"
           th Image
           th Product
           th Supplier
-          th Payment Progress
+          th
+            | Payment Progress
+            .flex.justify-between.text-xs.font-medium.opacity-80
+              span.text-lime-700/90 class="dark:text-lime-500/85" paid
+              span.text-slate-400 item
+              span.text-orange-800/70 class="dark:text-orange-400/80" debt
           th.text-right Actions
       tbody
         = render @purchases, cache: true
