feat: Refactor purchase payment progress rendering to improve data handling and display consistency

--- a/app/views/purchases/_purchase.html.slim
+++ b/app/views/purchases/_purchase.html.slim
@@ -16,7 +16,7 @@ tr.hoverable id="#{dom_id purchase}" data-action="click->table#goTo" data-table-
           - purchase.purchase_items.group_by(&:warehouse).each do |warehouse, pp|
             li #{warehouse.name}: #{pp.count}
   td.break-words = purchase.supplier.title
-  td.w-50 = render "_shared/purchase_payment_progress", purchase: purchase
+  td.w-45 = render "_shared/purchase_payment_progress", progress: purchase.progress, paid: purchase.item_paid, price: purchase.item_price, debt: purchase.item_debt
 
   - if action_name != "show"
     td.actions
