--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -22,7 +22,7 @@ header.nav_header
         .table-card
           .flex.justify-between
             h3 Purchase Items: #{@purchase_items.size}
-            .mx-3.mt.w-80.mt-5.mr-3.text-center = render "_shared/purchase_payment_progress", purchase: @purchase
+            .mx-3.mt.w-45.mt-5.mr-3.text-center = render "_shared/purchase_payment_progress", progress: @purchase.progress, paid: @purchase.item_paid, price: @purchase.item_price, debt: @purchase.item_debt
 
           = render "_shared/move_to_warehouse/form", form_url: move_purchase_items_path, options: {redirect_to_sale_item: true}
 
