--- a/app/views/warehouses/_purchase_items.html.slim
+++ b/app/views/warehouses/_purchase_items.html.slim
@@ -2,7 +2,7 @@
   .table-card data-controller="move-items"
     .flex.justify-between
       h3 Items: #{@purchase_items.total_count}
-      .w-40.mt-5.mr-3.text-center = render "_shared/warehouse_payment_progress", progress: @warehouse.average_payment_progress, debt: @warehouse.total_debt
+      .w-45.mt-5.mr-3.text-center = render "_shared/purchase_payment_progress", progress: @warehouse.average_payment_progress, debt: @warehouse.total_debt, only_debt: true
 
     .search.spacing-m
       = render partial: "_shared/search-form", locals: {path: warehouse_path}
@@ -16,7 +16,12 @@
           = render "_shared/move_to_warehouse/th"
           th Title
           th Supplier
-          th Payment Progress
+          th
+            | Payment Progress
+            .flex.justify-between.text-xs.font-medium.opacity-80
+              span.text-lime-700/90 class="dark:text-lime-500/85" paid
+              span.text-slate-400 item
+              span.text-orange-800/70 class="dark:text-orange-400/80" debt
           th.text-right Actions
         tbody
           - @purchase_items.each do |item|
