--- a/app/views/sales/_product_fields.html.slim
+++ b/app/views/sales/_product_fields.html.slim
@@ -1,7 +1,7 @@
 - if product.present?
   .sales-form__product_fields.mb-3.max-w-1/3.border.border-gray-200.rounded-xl.p-4.pb-8 class="dark:border-gray-800"
-    = f.hidden_field :product_id
-    h6.mb-6.mt-2 = product.full_title
+    = f.label :product_id, "Product"
+    = f.collection_select :product_id, Product.all, :id, :build_full_title_with_shop_id, { class: "select" }, data: { controller: "slim-select" }
     = f.label :qty, "Amount"
     = f.number_field :qty
     = f.label :price
