--- a/app/views/purchases/_form.html.slim
+++ b/app/views/purchases/_form.html.slim
@@ -25,7 +25,7 @@
       = form.label :amount
       = form.text_field :amount
     .block.w-full
-      - if action_name == "new"
+      - if purchase.new_record?
         = form.fields_for :payments do |payment_builder|
           = payment_builder.label "What did you pay in total?"
           = payment_builder.number_field :value, step: :any
