fix: Improve tests to incorporate latest changes
feat: Add light blue button style and update related components for consistency
fix: Update purchase item associations and improve test expectations for clarity

--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -203,6 +203,9 @@
   .icn {
     @apply font-normal font-icn not-italic;
   }
+  .btn-lightblue {
+    @apply text-sky-700 bg-sky-100 hover:bg-sky-200/76 dark:text-sky-300 dark:bg-sky-900/50 dark:hover:bg-sky-900 px-3 w-fit border-transparent;
+  }
 
   /* Pagination */
   .pagination {
