--- a/app/views/dashboard/noop.html.slim
+++ b/app/views/dashboard/noop.html.slim
@@ -1,8 +1,7 @@
 = render "_shared/notice"
 
 - if flash[:error].present?
-  article.notice.is-error
-    .container
-      i.icn ✋
-      p = sanitize(flash[:error])
-      i.icn ✋
+  article.h-24.mx-auto.bg-red-100.rounded-xl.flex.justify-between.items-center.p-8.mb-8.text-red-700 class="dark:bg-red-800/60 dark:text-red-300"
+    i.icn.text-3xl ✋
+    p.text-lg.font-semibold = sanitize(flash[:error])
+    i.icn.text-3xl ✋
