--- a/app/views/purchases/index.html.slim
+++ b/app/views/purchases/index.html.slim
@@ -13,6 +13,7 @@ section.section-border-base.section-wide data-controller="table move-items"
           = render "_shared/move_to_warehouse/th"
           th Image
           th Product
+          th Order Reference
           th Supplier
           th
             | Payment Progress
