feat: Add multi-language support for warehouse descriptions
Replace single external_desc field with separate desc_en and desc_de fields
to support both English and German warehouse descriptions. This change
affects the warehouse model, controllers, mailers, views, and associated
tests to provide localized content for international customers.

BREAKING CHANGE: Renamed external_desc database column to desc_en and
added desc_de column. All references to external_desc must be updated
to use the new language-specific fields.

--- a/app/views/notifications_mailer/product_purchased_email.text.slim
+++ b/app/views/notifications_mailer/product_purchased_email.text.slim
@@ -5,6 +5,10 @@
 = "\r\n"
 = "\r\n"
 | Aktueller Status: #{@warehouse_name}
+- if @warehouse_desc_de.present?
+  = "\r\n"
+  | Beschreibung: #{@warehouse_desc_de}
+= "\r\n"
 = "\r\n"
 | Artikel: #{@item_name}
 = "\r\n"
@@ -32,6 +36,10 @@
 = "\r\n"
 = "\r\n"
 | Current Status: #{@warehouse_name}
+- if @warehouse_desc_en.present?
+  = "\r\n"
+| Description: #{@warehouse_desc_en}
+= "\r\n"
 = "\r\n"
 | Sale Item: #{@item_name}
 = "\r\n"
