--- a/app/views/notifications_mailer/warehouse_changed_email.text.slim
+++ b/app/views/notifications_mailer/warehouse_changed_email.text.slim
@@ -5,8 +5,16 @@
 = "\r\n"
 = "\r\n"
 | Vorheriger Status: #{@previous_status}
+- if @previous_status_desc_de.present?
+  = "\r\n"
+  | Beschreibung: #{@previous_status_desc_de}
+= "\r\n"
 = "\r\n"
 | Neuer Status: #{@new_status}
+- if @new_status_desc_de.present?
+  = "\r\n"
+  | Beschreibung: #{@new_status_desc_de}
+= "\r\n"
 = "\r\n"
 | Artikel: #{@item_name}
 = "\r\n"
@@ -34,8 +42,15 @@
 = "\r\n"
 = "\r\n"
 | Previous Status: #{@previous_status}
+- if @previous_status_desc_en.present?
+  = "\r\n"
+  | Description: #{@previous_status_desc_en}
+= "\r\n"
 = "\r\n"
 | New Status: #{@new_status}
+- if @new_status_desc_en.present?
+  = "\r\n"
+  | Description: #{@new_status_desc_en}
 = "\r\n"
 = "\r\n"
 | Sale Item: #{@item_name}
