--- a/app/views/warehouses/_form.html.slim
+++ b/app/views/warehouses/_form.html.slim
@@ -1,15 +1,18 @@
 = form_with(model: warehouse) do |form|
-  .block.w-full
-    = form.label :name
-    = form.text_field :name
-
-  fieldset.flex.justify-between.gap-4
+  fieldset.flex.justify-between.gap-4.-mt-6
+    .block.w-full
+      = form.label :name
+      = form.text_field :name
     .block.w-full
       = form.label :external_name
       = form.text_field :external_name
-    .block.w-full
-      = form.label :external_desc
-      = form.text_field :external_desc
+
+  .block.w-full
+    = form.label :desc_en, "English Description"
+    = form.text_field :desc_en
+  .block.w-full
+    = form.label :desc_de, "German Description"
+    = form.text_field :desc_de
 
   fieldset.flex.justify-between.gap-4
     .block.w-full
