--- a/app/views/warehouses/show.html.slim
+++ b/app/views/warehouses/show.html.slim
@@ -21,8 +21,10 @@ header.nav_header
       p = @warehouse.name
       h5 External Name for Clients
       p = safe_blank_render @warehouse.external_name
-      h5 External Description
-      p = safe_blank_render @warehouse.external_desc
+      h5 English Description
+      p = safe_blank_render @warehouse.desc_en
+      h5 German Description
+      p = safe_blank_render @warehouse.desc_de
       h5 CBM
       p = safe_blank_render @warehouse.cbm
       h5 Container Tracking Number
